k8s/overlays/dev/ingress/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media-app-ingress
spec:
  tls:
  - hosts:
    - "api.mediaapp.local"
    - "app.mediaapp.local"
    secretName: media-app-tls
  rules:
  - host: "api.mediaapp.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-app-service
            port:
              number: 8000
  - host: "app.mediaapp.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-app-service
            port:
              number: 3000


# k8s/overlays/dev/ingress/ingress-patch.yaml
